--- a/assets/style/memorice-style-large.css
+++ b/assets/style/memorice-style-large.css
@@ -1,4 +1,4 @@
-@media (max-width: 992px) {
+@media (min-width: 768px){
     
 * {
     margin: 0;
@@ -30,9 +30,9 @@ main {
 }
 
 .tarjeta {
-    width: 135px;
+    width: 128px;
     height: 200px;
-    margin: 0.25rem;
+    margin: 3px;
     border-radius: 0.3em;
     background-image: var(--gradient);
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.25), 4px 4px 10px rgba(0, 0, 0, 0.2);
