--- a/assets/style/memorice-style-extralarge.css
+++ b/assets/style/memorice-style-extralarge.css
@@ -27,8 +27,8 @@ main {
 }
 
 .tarjeta {
-    width: 14vw;
-    height: 34vh;    
+    width: 190px;
+    height: 240px;    
     border-radius: 0.3em;
     background-image: var(--gradient);
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.25), 4px 4px 10px rgba(0, 0, 0, 0.2);
