--- a/assets/style/general.css
+++ b/assets/style/general.css
@@ -4,16 +4,25 @@
   --orange: #f27121;
   --black: #000;
   --gradient: linear-gradient(35deg, var(--orange), var(--hotpink));
-  
-
 }
 
 body {
-  margin: auto;
-  min-height: 100vh;
-  background-image: url("https://i.postimg.cc/vTxsH8GS/1920x855-Gates-of-Olympus-bg.jpg"); 
+  width: 100vw;
+  height: 100vh; 
+  margin: 0;
+  padding: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-image: url("https://i.postimg.cc/q71kQMQz/Grand.png");
+  background-position: center;  
+  background-attachment: fixed; 
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  
+}
+
+.tarjeta {
+  background-image: url("https://i.postimg.cc/fTfWys12/Whats-App-Image-2022-07-02-at-12-24-45-AM.jpg") ;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  
 }
