--- a/assets/style/memorice-style-extralarge.css
+++ b/assets/style/memorice-style-extralarge.css
@@ -1,90 +1,17 @@
 @media (min-width: 993px) {
     
-* {
-    margin: 0;
-    padding: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-main {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+main {    
     width: 100vw;
     height: 100vh;    
 }
 
 .mesa {
-    width: 100vw;
-    height: 90vh;
-    display: flex; 
-    flex-direction: row;
-    flex-wrap: wrap; 
-    align-items: center;
-    justify-content: center;       
+    min-width: 100vw;
+    min-height: 90vh;         
 }
 
 .tarjeta {
-    width: 190px;
-    height: 240px;    
-    border-radius: 0.3em;
-    background-image: url("https://i.postimg.cc/fTfWys12/Whats-App-Image-2022-07-02-at-12-24-45-AM.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.25), 4px 4px 10px rgba(0, 0, 0, 0.2);
-    position: relative;
-    transition: 0.3s;
-    cursor: pointer;
-    backface-visibility: hidden;
-    transform-style: preserve-3d;
-    background-color: linear-gradient(35deg, #f27121, #e94057);
-    
-}
-
-.contenido-tarjeta{
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    transform: rotateY(-180deg);
-    backface-visibility: hidden;
-    background-color: white;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.25), 4px 4px 10px rgba(0, 0, 0, 0.2);
-    border-radius: 0.3em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-}
-
-.contenido-tarjeta::selection {
-    background: transparent;
-  }
-  
-.tarjeta.descubierta {
-    transform: rotateY(-180deg);
-  }
-
-  
-.button-footer {
-    width: 100vw;
-    height: 15vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-.barajar-button {
-    width: 8vw;
-    height: 7vh;
-    
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.25), 4px 4px 10px rgba(0, 0, 0, 0.2);
-}
-
-
+    width: 170px;
+    height: 200px;    
+    border-radius: 0.3em;   
 }
