--- a/assets/style/memorice-style-medium.css
+++ b/assets/style/memorice-style-medium.css
@@ -1,19 +1,28 @@
 @media (min-width: 577px) {
     
-main {  
-    width: 100vw;
-    height: 100vh;    
-}
+    body {
+        background-image: url("https://i.postimg.cc/Jzr6WbjY/1366-768-ordenador-port-til-medio.png");
+        background-position: center;  
+        background-attachment: fixed; 
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+    } 
+    
+    main {  
+        width: 100vw;
+        height: 100vh;    
+    }
 
-.mesa {
-    width: 100vw;
-    height: 80vh;
-    gap: 2vw;        
-}
+    .mesa {
+        width: 100vw;
+        height: 80vh;
+        gap: 10px;
+            
+    }
 
-.tarjeta {
-    width: 100px;
-    height: 160px;
-    margin: 0.25rem;
-    border-radius: 0.3em;    
+    .tarjeta {
+        width: 90px;
+        height: 120px;    
+        border-radius: 0.3em;    
+    }
 }
