--- a/assets/style/memorice-style-medium.css
+++ b/assets/style/memorice-style-medium.css
@@ -14,6 +14,7 @@
     }
 
     .mesa {
+        padding-top: 15vh;
         width: 100vw;
         height: 80vh;
         gap: 10px;
@@ -21,8 +22,8 @@
     }
 
     .tarjeta {
-        width: 90px;
-        height: 120px;    
+        width: 14vw;
+        height: 33vh;     
         border-radius: 0.3em;    
     }
 }
