--- a/assets/style/general.css
+++ b/assets/style/general.css
@@ -16,9 +16,9 @@ body {
 }
 
 .tarjeta {
-  background-image: url("https://i.postimg.cc/fTfWys12/Whats-App-Image-2022-07-02-at-12-24-45-AM.jpg") ;
+  background-image: url("https://i.postimg.cc/BbwsgsgF/wingzgate-psd-2.jpg") ;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: cover;
 }
 
