--- a/assets/style/memorice-style-small.css
+++ b/assets/style/memorice-style-small.css
@@ -21,8 +21,8 @@
     }
 
     .tarjeta {
-        width: 12vw;
-        height: 25vh; 
+        width: 40px;
+        height: 70px; 
         border-radius: 0.3em;    
     }
 }
