prueba tamaño celular N°2

--- a/assets/style/memorice-style-small.css
+++ b/assets/style/memorice-style-small.css
@@ -21,8 +21,8 @@
     }
 
     .tarjeta {
-        width: 50px;
-        height: 90px; 
+        width: 14vw;
+        height: 22vh; 
         border-radius: 0.3em;    
     }
 }
