--- a/assets/style/general.css
+++ b/assets/style/general.css
@@ -16,7 +16,7 @@ body {
 }
 
 .tarjeta {
-  background-image: url("https://i.postimg.cc/BbwsgsgF/wingzgate-psd-2.jpg") ;
+  background-image: url("https://i.postimg.cc/J0ZTMFQv/a.png") ;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
