--- a/assets/style/memorice-style.css
+++ b/assets/style/memorice-style.css
@@ -40,7 +40,11 @@ main {
     border-radius: 0.3em;
     display: flex;
     justify-content: center;
-    align-items: center;    
+    align-items: center;   
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover; 
+    
 }
 
 .contenido-tarjeta::selection {
@@ -51,4 +55,8 @@ main {
     transform: rotateY(-180deg);
   }
 
-
+.descubierta {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
